--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,16 @@
+body {
+	margin: 0;
+}
+
+header {
+	background: lightseagreen;
+}
+
 h1 {
-	color: red;
+	color: white;
 	text-align: center;
+	padding: 3vh;
+	margin: 0;
+	font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 4vh;
 }
